@@ -15,6 +15,7 @@
     "IGNORE_PATTERN": [],
     "DIRSFIRST": false,
     "SESAME": null,
+    "SESAME_TOTP_SECRET": null,
     "VERIFY_HOSTNAME": null,
     "ENV_PREFIX": "HC_",
     "NOTIFY_SERVICE": "persistent_notification.create"
